--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <title>Engineer's Notebook</title>
-</head>
-<body>
+---
+layout: default
+---
 
-    <h1>Engineer's Notebook</h1>
+<h1>Engineer's Notebook</h1>
+<p>Engineer's Notebook is Kyungjae's personal engineering blog where ideas
+and knowledge to make the world a better place come together.</p>
 
-</body>
-</html>
